将应用包名改为XMBOX

--- a/settings.gradle
+++ b/settings.gradle
@@ -23,7 +23,7 @@ dependencyResolutionManagement {
     }
 }
 
-rootProject.name = "TVBoxMobile"
+rootProject.name = "XMBOX"
 include ':app'
 include ':player'
 include ':quickjs'
