--- a/.github/workflows/android-build.yml
+++ b/.github/workflows/android-build.yml
@@ -49,7 +49,7 @@ jobs:
           echo "VERSION_NAME=$VERSION_NAME" >> $GITHUB_ENV
           echo "VERSION_CODE=$VERSION_CODE" >> $GITHUB_ENV
           echo "BUILD_DATE=$BUILD_DATE" >> $GITHUB_ENV
-          echo "APK_NAME=MBox_v${VERSION_NAME}_${BUILD_DATE}" >> $GITHUB_ENV
+          echo "APK_NAME=XMBOX_v${VERSION_NAME}_${BUILD_DATE}" >> $GITHUB_ENV
 
       - name: Grant execute permission for gradlew
         run: chmod +x gradlew
