--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,11 +9,11 @@ android {
 
     namespace 'com.github.tvbox.osc'
     defaultConfig {
-        applicationId 'com.github.tvbox.osc'
+        applicationId 'com.xmbox.app'
         minSdkVersion 24
         targetSdkVersion 33
-        versionCode 31
-        versionName '1.1.1'
+        versionCode 32
+        versionName '2.0.0'
         multiDexEnabled true
         // 增加下面的配置以支持 Java 8 特性
         compileOptions {
@@ -39,7 +39,7 @@ android {
 
         // Apk 输出配置
         variant.outputs.all { output ->
-            outputFileName = 'MBox_v' + variant.versionName + '_' + variant.buildType.name
+            outputFileName = 'XMBOX_v' + variant.versionName + '_' + variant.buildType.name
             if (variant.buildType.name == buildTypes.release.getName()) {
                 outputFileName += '_' + new Date().format("yyyyMMdd")
             }
@@ -155,6 +155,7 @@ dependencies {
     //glide图片加载
     implementation 'com.github.bumptech.glide:glide:4.12.0'
     kapt 'com.github.bumptech.glide:compiler:4.12.0'
+    implementation 'com.github.bumptech.glide:okhttp3-integration:4.12.0'
 
     //使用官方TabLayout和ViewPager2替代自定义TabLayout
     implementation 'androidx.viewpager2:viewpager2:1.0.0'
@@ -177,4 +178,7 @@ dependencies {
     implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.7.0"
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.7.0"
     implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.7.0"
+
+    // 内存泄漏检测 - 仅在debug模式下使用
+    debugImplementation 'com.squareup.leakcanary:leakcanary-android:2.12'
 }
