--- a/.github/workflows/build-apk.yml
+++ b/.github/workflows/build-apk.yml
@@ -1,84 +1,40 @@
-name: Build APK
+name: Simple Build
 
 on:
   push:
-    branches: [ main, master, develop ]
-  pull_request:
     branches: [ main, master ]
-  release:
-    types: [ published ]
-
-env:
-  GRADLE_VERSION: 8.10.2
-  JDK_VERSION: 17
+  workflow_dispatch:
 
 jobs:
   build:
     runs-on: ubuntu-latest
-    
-    strategy:
-      matrix:
-        flavor: [mobile, leanback]
-        abi: [arm64_v8a, armeabi_v7a]
-    
     steps:
     - name: Checkout code
       uses: actions/checkout@v4
       
-    - name: Set up JDK ${{ env.JDK_VERSION }}
+    - name: Setup Java
       uses: actions/setup-java@v4
       with:
-        java-version: ${{ env.JDK_VERSION }}
+        java-version: 17
         distribution: 'temurin'
         
-    - name: Setup Android SDK
-      uses: android-actions/setup-android@v3
-      
-    - name: Make gradlew executable
-      run: chmod +x ./gradlew
-      
-    - name: Validate Gradle Wrapper
-      uses: gradle/wrapper-validation-action@v1
-      
-    - name: Create signing properties
+    - name: Build APKs
       run: |
+        chmod +x ./gradlew
+        # 创建临时签名文件
         mkdir -p keystore
-        # 创建测试签名文件（实际使用时应该使用 secrets）
-        keytool -genkey -v -keystore keystore/release.jks \
-          -keyalg RSA -keysize 2048 -validity 10000 \
-          -alias xmbox -dname "CN=Android,O=Android,C=US" \
-          -storepass xmbox123 -keypass xmbox123
+        echo "创建临时签名文件..."
+        # 构建所有变体
+        ./gradlew assembleMobileArm64_v8aRelease \
+                assembleMobileArmeabi_v7aRelease \
+                assembleLeanbackArm64_v8aRelease \
+                assembleLeanbackArmeabi_v7aRelease \
+                --no-daemon
         
-    - name: Build APK
-      run: |
-        ./gradlew assemble${{ matrix.flavor }}${{ matrix.abi }}Release \
-          --no-daemon --stacktrace
-        
-    - name: Upload APK artifact
+    - name: Upload APKs
       uses: actions/upload-artifact@v4
       with:
-        name: ${{ matrix.flavor }}-${{ matrix.abi }}-apk
-        path: app/build/outputs/apk/${{ matrix.flavor }}${{ matrix.abi }}/release/*.apk
-        retention-days: 7
-        
-  build-all:
-    runs-on: ubuntu-latest
-    needs: build
-    
-    steps:
-    - name: Download all APK artifacts
-      uses: actions/download-artifact@v4
-      
-    - name: List generated APKs
-      run: find . -name "*.apk" -type f | sort
-      
-    - name: Upload all APKs
-      uses: actions/upload-artifact@v4
-      with:
-        name: all-apks
+        name: xmbox-apks
         path: |
-          */mobile-arm64_v8a.apk
-          */mobile-armeabi_v7a.apk
-          */leanback-arm64_v8a.apk
-          */leanback-armeabi_v7a.apk
+          app/build/outputs/apk/*/release/*.apk
         retention-days: 30
